syntax = "proto3";
package comdex.asset.v1beta1;

option go_package = "github.com/comdex-official/comdex/x/asset/types";

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option (gogoproto.equal_all)           = false;
option (gogoproto.goproto_getters_all) = false;

message Collateral {
  uint64 id                = 1 [ (gogoproto.moretags) = "yaml:\"id\"" ];
  string denom_in          = 2 [ (gogoproto.moretags) = "yaml:\"denom_in\"" ];
  string denom_out         = 3 [ (gogoproto.moretags) = "yaml:\"denom_out\"" ];
  string liquidation_ratio = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false,
    (gogoproto.moretags)   = "yaml:\"liquidation_ratio\""
  ];
}
